--- a/css/index2.css
+++ b/css/index2.css
@@ -4,17 +4,18 @@ body {
   padding-top: 8px;
   padding-bottom: 8px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: powderblue;
 }
 
 .header {
-  background-color:teal;
+  background-color:# #2c292f;
   padding: 10px;
   text-align: center;
 }
 
 .topnav {
   overflow: hidden;
-  background-color: teal;
+  background-color: #333;
     display:block;
     transition: top 0.3s;
 }
@@ -67,7 +68,7 @@ body {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 100px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -108,17 +109,22 @@ body {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
+  /* for mobile phones: */
+  .menu,.main, right{
+    width: 100%;
+  }
+  
   .topnav a.icon {
     float: right;
     display: block;
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
@@ -152,7 +158,43 @@ body {
   padding-top: 60px;
 }
 
-
+.steps.active span {
+    background: #6bc048;
+    font-weight: 700;
+}
+.steps span {
+    display: block;
+    background: grey;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: relative;
+    z-index: 2;
+    margin: 0 auto;
+    color: #fff;
+    padding-top: 4px;
+}
+.cart-row {
+    border-bottom: thin solid #f1f1f1;
+    overflow: hidden;
+    width: 100%;
+    padding: 20px 0 20px 0;
+}
+ 
+.product-link{
+    color:#000000;
+}
+ 
+.product-link:hover{
+    color:#000000;
+    text-decoration:none;
+}
+ 
+.product-img-thumb {
+    margin: 0 0 10px 0;
+    width: 100%;
+    cursor: pointer;
+}
 
 html,
 body {
