--- a/css/index2.css
+++ b/css/index2.css
@@ -1,9 +1,9 @@
 body {
   margin: 0;
-  font-size: 20px;
+  font-size: 15px;
   padding-top: 8px;
   padding-bottom: 8px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: roboto, Helvetica, sans-serif;
   background-color: powderblue;
 }
 
@@ -131,7 +131,7 @@ body {
   opacity: 0.7;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 767px) {
   .topnav a:not(:first-child), .dropdown .dropbtn {
     display: none;
   }
